--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,43 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="#00000000"
     tools:context=".CameraActivity">
     <com.example.camreamodel.CameraView
         android:id="@+id/camera_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <include layout="@layout/bubble_layout"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/view_1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        />
+    <include layout="@layout/bubble_layout"
+        android:visibility="gone"
+        android:layout_marginTop="35dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/view_2"
+        android:layout_below="@id/view_1"
+        />
+    <include layout="@layout/bubble_layout"
+        android:visibility="gone"
+        android:layout_marginTop="35dp"
+        android:layout_below="@id/view_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/view_3"
+        android:layout_centerInParent="true"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <RelativeLayout
+            android:background="#00000000"
             android:id="@+id/camera_top_view"
-            android:background="#32000000"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/back"
+                android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:layout_width="25dp"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/back"/>
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@mipmap/back_g"/>
             <ImageView
                 android:id="@+id/light"
                 android:layout_centerInParent="true"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:src="@mipmap/lightg_close"/>
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@mipmap/light_close"/>
+
             <ImageView
                 android:id="@+id/camera_setting"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_width="25dp"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/setting"/>
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginEnd="7dp"
+                android:layout_marginRight="7dp"
+                android:src="@mipmap/setting_0" />
         </RelativeLayout>
         <LinearLayout
+            android:background="#00000000"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="20"
@@ -51,20 +85,17 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
                 <View
-                    android:background="#32000000"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     />
                 <ImageView
-                    android:src="@mipmap/camera_crop"
+                    android:background="@drawable/shape_cornet"
                     android:layout_width="0dp"
                     android:layout_weight="18"
                     android:layout_height="match_parent"
-                    android:scaleType="fitXY"
                     android:id="@+id/camera_crop"/>
                 <View
-                    android:background="#32000000"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -73,7 +104,7 @@
 
         </LinearLayout>
         <RelativeLayout
-            android:background="#32000000"
+            android:background="#0000"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal"
@@ -82,12 +113,10 @@
                 android:background="@drawable/button_ripple"
                 android:id="@+id/camera_discern"
                 android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/camera_discern"/>
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@mipmap/eye_open"/>
         </RelativeLayout>
-
-
     </LinearLayout>
 
 </RelativeLayout>
