--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_marginTop="75dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="相机Model"
+        android:text="相机Demo"
         android:textSize="40dp"
         android:id="@+id/startText"
         android:layout_centerHorizontal="true"
@@ -25,12 +26,5 @@
         android:layout_below="@id/startText"
         android:layout_centerHorizontal="true"
         android:background="#96bf1322"/>
-    <ImageView
-        android:id="@+id/show_bitmap"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_below="@id/open_camera_activity"/>
 
 </RelativeLayout>
