--- a/app/src/main/res/layout/bubble_layout.xml
+++ b/app/src/main/res/layout/bubble_layout.xml
@@ -9,7 +9,7 @@
     app:offset="-40dp"
     app:radius="4dp"
     app:shadow_color="#000000"
-    app:shadow_size="20dp"
+    app:shadow_size="2dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
@@ -24,10 +24,11 @@
             android:layout_height="48dp"
             android:src="@mipmap/light_open"/>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="128dp"
             android:layout_height="48dp"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/label_1"
                 android:textColor="#efebe9"
                 android:textSize="12dp"
                 android:layout_weight="1"
@@ -35,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"/>
             <TextView
+                android:id="@+id/label_2"
                 android:textSize="12dp"
                 android:textColor="#efebe9"
                 android:layout_weight="1"
@@ -42,6 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"/>
             <TextView
+                android:id="@+id/label_3"
                 android:textColor="#efebe9"
                 android:textSize="12dp"
                 android:layout_weight="1"
