--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -10,31 +10,28 @@
         android:id="@+id/camera_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-    <include layout="@layout/bubble_layout"
+    <include layout="@layout/oval_layout"
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/view_1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_centerInParent="true"
         />
-    <include layout="@layout/bubble_layout"
+    <include layout="@layout/oval_layout"
+        android:layout_centerInParent="true"
+        android:layout_above="@id/view_1"
         android:visibility="gone"
-        android:layout_marginTop="35dp"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/view_2"
-        android:layout_below="@id/view_1"
         />
     <include layout="@layout/bubble_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/view_1"
         android:visibility="gone"
-        android:layout_marginTop="35dp"
-        android:layout_below="@id/view_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/view_3"
-        android:layout_centerInParent="true"
         />
     <LinearLayout
         android:layout_width="match_parent"
