--- a/app/src/main/res/layout/oval_layout.xml
+++ b/app/src/main/res/layout/oval_layout.xml
@@ -2,13 +2,14 @@
 <com.example.camreamodel.BubbleLayout android:layout_centerInParent="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:padding="4dp"
     app:background_color="#af66bb6a"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:offset="-40dp"
     app:radius="8dp"
     app:shadow_color="#000000"
+    app:showTriangle="0dp"
     app:shadow_size="2dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -18,7 +19,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <ImageView
-            android:id="@+id/dialog_image"
+            android:id="@+id/oval_image"
             android:scaleType="fitXY"
             android:layout_width="48dp"
             android:layout_height="48dp"
@@ -28,7 +29,7 @@
             android:layout_height="48dp"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/label_1"
+                android:id="@+id/oval_1"
                 android:textColor="#efebe9"
                 android:textSize="12dp"
                 android:layout_weight="1"
@@ -36,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"/>
             <TextView
-                android:id="@+id/label_2"
+                android:id="@+id/oval_2"
                 android:textSize="12dp"
                 android:textColor="#efebe9"
                 android:layout_weight="1"
@@ -44,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"/>
             <TextView
-                android:id="@+id/label_3"
+                android:id="@+id/oval_3"
                 android:textColor="#efebe9"
                 android:textSize="12dp"
                 android:layout_weight="1"
